Fix wrap issue

--- a/src/components/registers/style.css
+++ b/src/components/registers/style.css
@@ -14,6 +14,7 @@
 .registers-component .register {
   border-top: 1px solid #ced4da;
   padding: 0.25rem 0.5rem;
+  white-space: nowrap;
 }
 
 .registers-component .register * {
